fixed the overflow of content on the basket modal

--- a/src/components/Modal/BasketModal/BasketModal.css
+++ b/src/components/Modal/BasketModal/BasketModal.css
@@ -8,10 +8,11 @@
     height: 100%;
     z-index: 1;
   }
-  .modal-content{
+  .modal-body{
     position: relative;
-    max-width: 300px;
-    min-height: 500px;
+    width: 300px;
+    max-height: 500px;
+    height: 500px;
     border-radius: 15px  15px  15px  15px;
     padding: 20px;
     background-color: white;
@@ -19,10 +20,24 @@
     left: 85%;
     transform: translate(-50%, -50%);
   }
+   .modal-content{
+   height:100%;
+   overflow:auto;
+   display: flex;
+   flex-direction: column;
+  }
+  .the-items{
+    /* height: 70%; */
+    overflow-y:scroll;
+  }
+  /* .the-items:hover{
+    overflow-y: scroll;
+  } */
   .basket-nav{
     display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
+    height: 10%;
     padding: 10px;
     border-bottom: 1px solid grey;
   }
@@ -46,17 +61,19 @@
   }
   .item-brief-info{
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
     padding: 15px 0;
     border-bottom: 1px solid rgb(218, 218, 218);
+    flex-wrap: wrap;
   }
-  /* .the-items  .item-brief-info:first-child {
-    padding-top:0;
-  } */
   .product-image{
     width:60px;
-    height: fit-content;
+    transform: scale(1);
+    transition: 500ms transform;
+  }
+  .product-image:hover{
+    cursor: pointer;
+    transform: scale(1.1);
   }
   .price-product-info{
     display: flex;
@@ -64,7 +81,6 @@
     justify-content: space-around;
   }
   .item-brief-info:hover{
-    cursor: pointer;
     background-color: rgb(244, 243, 243);
   }
   .add-more-box{
@@ -87,6 +103,9 @@
     border-left: 1px solid grey;
      cursor: pointer;
   }
+  .modal-footer{
+    border-top: 1px solid rgb(208, 208, 208);
+  }
   .order-total{
     display: flex;
     justify-content: space-between;
@@ -97,14 +116,11 @@
     justify-content: center;
     }
     .basket-btn button{
-        width: 100%;
-        min-height: 35px;
-        color: white;
-        background-color:black;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+   width: 100%;
+   min-height: 35px;
+   color: white;
+   background-color:black;
+   border-radius: 5px 5px 5px 5px;
     }
     .basket-btn:hover button{
         cursor: pointer;
